# tortaapp

./: .gitignore  README.md  add_copy_functionality.py  build_exe.py  charts_engine.py  enhance_price_editor.py  extend_noise_filter.py  fix_constants.py  fix_errors.js  fix_errors.py  fix_price_manager_init.py  fix_stats_error.py  implement_noise_filter.py  implement_z_score.py  ml_predictor.py  ml_predictor.py.backup  ml_predictor.py.backup2  normalize_prices.py  patch_all.py  patch_all_v2.py  patch_app.py  price_editor_patch.py  price_manager.py  requirements.txt  run_stress_test.py  superpy_app.py  superpy_app.py.backup2  test_ml_standalone.py  threading_utils.py  verify_fix.py  verify_ml_fix.py  wurm_parser.py  wurm_stats_engine.py
TortaApp-V2/: .cursorrules  .gitignore  06_badges_system.sql  07_shouts_system.sql  12_debug_admin_role.sql  13_fix_admin_final.sql  15_god_mode_schema.sql  19_fix_rankings_rpc.sql  21_real_gamification.sql  22_update_player_stats_rpc.sql  24_test_rpc.sql  26_diagnose_schema.sql  27_check_profiles_schema.sql  28_list_all_tables.sql  29_fix_gamification_complete.sql  31_debug_fix_v3.sql  32_fix_ambiguous_nick.sql  33_refine_v3_logic.sql  36_seasonal_badges.sql  37_integrate_daily_xp.sql  38_simple_daily_xp.sql  40_check_jotasiete_xp.sql  App.tsx  BADGE_REGISTRY.md  GAMIFICATION_GUIDE.md  README.md  add_contact_info.py  apply_fixes.py  check_json_encoding.py  fix_app.py  fix_app_binary.py  fix_email_display.py  fix_emoji_bugs.py  fix_emoji_rendering.py  fix_icon_binary.py  (+19 more)
TortaApp-V2/src-tauri/: Cargo.toml  tauri.conf.json
(+157 files in other folders)
